(feature): Implementação Migrador de alta Disponibilidade